--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -15,6 +15,16 @@
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData">
         </endpoint>
       </service>
+
+      <service name="BackEndProcessorService.StateProcessingModule">
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:10005/IStateProcessingModule" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateProcessingModule">
+        </endpoint>
+      </service>
     </services>
   </system.serviceModel>
 </configuration>
