--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -7,14 +7,20 @@
   <system.serviceModel>
     <services>
       <service name="BackEndProcessorService.BackEndPocessingModule">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData" />
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10000/IBackEndProessingData" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData">
-        </endpoint>
       </service>
     </services>
+
+    <client>
+      <endpoint address="net.tcp://localhost:10002/IFieldCommunicationService"
+                binding="netTcpBinding"
+                contract="ScadaCommon.ServiceContract.IFieldCommunicationService" name="FieldCommunicationServiceEndPoint">
+      </endpoint>
+    </client>
   </system.serviceModel>
 </configuration>
