--- a/SCADA/FrontEndProcessorService/App.config
+++ b/SCADA/FrontEndProcessorService/App.config
@@ -14,11 +14,11 @@
 
 
     <services>
-      <service name="FrontEndProcessorService.ViewModel.FieldCommunicationService">
+      <service name="FrontEndProcessorService.FieldCommunicationService">
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10001/IFieldCommunicationService" />
+            <add baseAddress="net.tcp://localhost:10002/IFieldCommunicationService" />
           </baseAddresses>
         </host>
       </service>
