--- a/TransactionManagerContracts/TransactionManagerContracts.csproj
+++ b/TransactionManagerContracts/TransactionManagerContracts.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IEnlistManager.cs" />
     <Compile Include="IModelUpdateContract.cs" />
+    <Compile Include="ITransactionSteps.cs" />
     <Compile Include="ModelUpdateProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
