--- a/ModelLabsApp/App.config
+++ b/ModelLabsApp/App.config
@@ -3,7 +3,12 @@
   <system.serviceModel>
     <client>
       <!-- Network Model Service-->
-      <endpoint address="net.tcp://localhost:10000/NetworkModelService/GDA/" behaviorConfiguration="NMSClientBehavior" binding="netTcpBinding" bindingConfiguration="netTcpBindingNoSecurity" contract="NetworkModelGDAContract.INetworkModelGDAContract" name="NetworkModelGDAEndpoint">
+      <endpoint address="net.tcp://localhost:10001/NetworkModelService/GDA/" behaviorConfiguration="NMSClientBehavior" binding="netTcpBinding" bindingConfiguration="netTcpBindingNoSecurity" contract="NetworkModelGDAContract.INetworkModelGDAContract" name="NetworkModelGDAEndpoint">
+        <identity>
+          <dns value="localhost"/>
+        </identity>
+      </endpoint>
+      <endpoint address="net.tcp://localhost:10001/NetworkModelService/GDA/" behaviorConfiguration="NMSClientBehavior" binding="netTcpBinding" bindingConfiguration="netTcpBindingNoSecurity" contract="TransactionManagerContracts.IModelUpdateContract" name="ModelUpdateEndpoint">
         <identity>
           <dns value="localhost"/>
         </identity>
