--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -33,9 +33,15 @@
             <dns value="localhost" />
           </identity>
         </endpoint>
+        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract"
+                  bindingConfiguration="netTcpBindingNoSecurity">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10000/NetworkModelService/GDA/" />
+            <add baseAddress="net.tcp://localhost:10001/NetworkModelService/GDA/" />
           </baseAddresses>
         </host>
       </service>
