Changes for StateUpdateService

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -14,25 +14,21 @@
           </baseAddresses>
         </host>
       </service>
-
-      <service name="NetworkDynamicService.PointUpdater.PointUpdateService">
+      <service name="NetworkDynamicService.PointUpdater.StateUpdateService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService" />
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10005/IPointUpdateService" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IPointUpdateService">
-        </endpoint>
       </service>
-      
-    <service name="NetworkDynamicService.PointOperateService">
+      <service name="NetworkDynamicService.PointOperateService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService" />
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10022/IFieldCommunicationService" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService">
-        </endpoint>
       </service>
     </services>
 
