--- a/SCADA/ScadaCommon/ScadaCommon.csproj
+++ b/SCADA/ScadaCommon/ScadaCommon.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceContract\IBackEndProessingData.cs" />
     <Compile Include="ServiceContract\IFieldCommunicationService.cs" />
-    <Compile Include="ServiceContract\IStateProcessingModule.cs" />
+    <Compile Include="ServiceContract\IStateUpdateService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
