Client for StateUpdateService for UI

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -18,7 +18,7 @@
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10005/IPointUpdateService" />
+            <add baseAddress="net.tcp://localhost:10005/IStateUpdateService" />
           </baseAddresses>
         </host>
       </service>
@@ -36,6 +36,11 @@
       <endpoint address="net.tcp://localhost:10002/IFieldCommunicationService"
                 binding="netTcpBinding"
                 contract="ScadaCommon.ServiceContract.IFieldCommunicationService" name="FieldCommunicationServiceEndPoint">
+      </endpoint>
+
+      <endpoint address="net.tcp://localhost:30003/IStateUpdateService"
+                binding="netTcpBinding"
+                contract="ScadaCommon.ServiceContract.IStateUpdateService" name="StateUpdateServiceEndPoint">
       </endpoint>
     </client>
   </system.serviceModel>
