--- a/TransactionManager/TransactionManager.csproj
+++ b/TransactionManager/TransactionManager.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TMData.cs" />
+    <Compile Include="TMProxy.cs" />
     <Compile Include="TransactionSteps.cs" />
   </ItemGroup>
   <ItemGroup>
