Services bug fixes

--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -47,6 +47,15 @@
       </service>
     </services>
 
+    <client>
+      <!-- CE Service-->
+      <endpoint address="net.tcp://localhost:10000/CE" behaviorConfiguration="NMSClientBehavior" binding="netTcpBinding" bindingConfiguration="netTcpBindingNoSecurity" contract="TransactionManagerContracts.IModelUpdateContract" name="CE">
+        <identity>
+          <dns value="localhost"/>
+        </identity>
+      </endpoint>
+    </client>
+    
     <bindings>
       <netTcpBinding>
         <binding name="netTcpBindingNoSecurity" closeTimeout="00:30:00"
@@ -72,6 +81,14 @@
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="NMSClientBehavior">
+          <clientCredentials supportInteractive="false">
+            <windows allowNtlm="true" allowedImpersonationLevel="Impersonation"/>
+          </clientCredentials>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
 
   </system.serviceModel>
