--- a/TransactionManagerContracts/TransactionManagerContracts.csproj
+++ b/TransactionManagerContracts/TransactionManagerContracts.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ITransactionSteps.cs" />
     <Compile Include="ModelUpdateProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TMProxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
