--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -45,6 +45,19 @@
           </baseAddresses>
         </host>
       </service>
+      <service behaviorConfiguration="NMS.ServiceBehavior" name="NetworkModelService.NotifyNMSService">
+        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.INotifyNMS"
+                  bindingConfiguration="netTcpBindingNoSecurity">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:10010/NetworkModelService/NotifyNMS" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
 
     <client>
