--- a/CalculationEngine/App.config
+++ b/CalculationEngine/App.config
@@ -18,6 +18,21 @@
           </baseAddresses>
         </host>
       </service>
+    
+      <service behaviorConfiguration="CE.ServiceBehavior" name="CalculationEngine.SCADAStuff.ScadaService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaContracts.IScadaService"
+                  bindingConfiguration="netTcpBindingNoSecurity">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:20202/SCADA" />
+          </baseAddresses>
+        </host>
+      </service>
+    
     </services>
 
     <bindings>
