Transaction on NDS implemented - working

--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -67,6 +67,12 @@
           <dns value="localhost"/>
         </identity>
       </endpoint>
+
+      <endpoint address="net.tcp://localhost:10055/NDS" behaviorConfiguration="NMSClientBehavior" binding="netTcpBinding" bindingConfiguration="netTcpBindingNoSecurity" contract="TransactionManagerContracts.IModelUpdateContract" name="NDS">
+        <identity>
+          <dns value="localhost"/>
+        </identity>
+      </endpoint>
     </client>
     
     <bindings>
