--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -6,32 +6,44 @@
 
   <system.serviceModel>
     <services>
-      <service name="BackEndProcessorService.BackEndPocessingModule">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData" />
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="BackEndProcessorService.BackEndPocessingModule">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData" bindingConfiguration="netTcpBindingNoSecurity"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10000/IBackEndProessingData" />
+            <add baseAddress="net.tcp://localhost:10050/IBackEndProessingData" />
           </baseAddresses>
         </host>
       </service>
-      <service name="NetworkDynamicService.PointUpdater.StateUpdateService">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService" />
+      
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.PointUpdater.StateUpdateService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService" bindingConfiguration="netTcpBindingNoSecurity"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10005/IStateUpdateService" />
           </baseAddresses>
         </host>
       </service>
-      <service name="NetworkDynamicService.PointOperateService">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService" />
+      
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.PointOperateService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService" bindingConfiguration="netTcpBindingNoSecurity"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10022/IFieldCommunicationService" />
           </baseAddresses>
         </host>
       </service>
+      
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.Transaction.ModelUpdateContract">
+        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" bindingConfiguration="netTcpBindingNoSecurity" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:10055/NDS" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
 
+    
     <client>
       <endpoint address="net.tcp://localhost:10002/IFieldCommunicationService"
                 binding="netTcpBinding"
@@ -48,5 +60,35 @@
                 contract="ScadaCommon.ServiceContract.IPointUpdateService" name="UpdatePointEndPoint">
       </endpoint>
     </client>
+
+    
+    <bindings>
+      <netTcpBinding>
+        <binding name="netTcpBindingNoSecurity" closeTimeout="00:30:00"
+				 openTimeout="00:30:00" sendTimeout="00:10:00" receiveTimeout="10:30:00" maxBufferSize="2147483647"
+				  maxReceivedMessageSize="2147483647">
+          <readerQuotas maxStringContentLength="2147483647" maxArrayLength="2147483647"/>
+          <security mode="None">
+            <transport clientCredentialType="None" protectionLevel="None" />
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+
+    
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="NetworkDynamicService.ServiceBehavior">
+          <serviceMetadata httpGetEnabled="false" />
+          <serviceThrottling
+           maxConcurrentCalls="1000"
+           maxConcurrentSessions="1000"
+           maxConcurrentInstances="1000"
+          />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    
   </system.serviceModel>
 </configuration>
