--- a/NetworkDynamicService/NetworkDynamicService.csproj
+++ b/NetworkDynamicService/NetworkDynamicService.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateUpdateServiceProxy.cs" />
+    <Compile Include="Transaction\ModelUpdateContract.cs" />
+    <Compile Include="Transaction\TransactionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -61,9 +63,17 @@
       <Project>{9E9F3E50-1395-46B5-8D75-B16A08B45CDF}</Project>
       <Name>BackEndProcessorService</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SCADA\ScadaCommon\ScadaCommon.csproj">
       <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
       <Name>ScadaCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TransactionManagerContracts\TransactionManagerContracts.csproj">
+      <Project>{0A8F68EC-31CB-4FD1-B54A-DCF2FC97BBEC}</Project>
+      <Name>TransactionManagerContracts</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
