Renamed projects and established communication.

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -7,7 +7,7 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="BackEndProcessorService.BackEndPocessingModule">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData" bindingConfiguration="netTcpBindingNoSecurity"/>
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10050/IBackEndProessingData" />
@@ -16,7 +16,7 @@
       </service>
       
       <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.PointUpdater.StateUpdateService">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService" bindingConfiguration="netTcpBindingNoSecurity"/>
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10005/IStateUpdateService" />
@@ -25,7 +25,7 @@
       </service>
       
       <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.PointOperateService">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService" bindingConfiguration="netTcpBindingNoSecurity"/>
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10022/IFieldCommunicationService" />
@@ -34,7 +34,7 @@
       </service>
       
       <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.Transaction.ModelUpdateContract">
-        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" bindingConfiguration="netTcpBindingNoSecurity" />
+        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:10055/NDS" />
