--- a/SCADA/ScadaCommon/ScadaCommon.csproj
+++ b/SCADA/ScadaCommon/ScadaCommon.csproj
@@ -47,7 +47,7 @@
     <Compile Include="BackEnd_FrontEnd\DigitalPoint.cs" />
     <Compile Include="BackEnd_FrontEnd\IInputObject.cs" />
     <Compile Include="BackEnd_FrontEnd\InputObject.cs" />
-    <Compile Include="BackEnd_FrontEnd\IProcessingObject.cs" />
+    <Compile Include="BackEnd_FrontEnd\ProcessingObject.cs" />
     <Compile Include="Connection\IConnection.cs" />
     <Compile Include="Connection\TCPConnection.cs" />
     <Compile Include="CRCCalculator\CRCCalculator.cs" />
