--- a/SCADA/ScadaCommon/ScadaCommon.csproj
+++ b/SCADA/ScadaCommon/ScadaCommon.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -51,6 +52,10 @@
     <Compile Include="Connection\IConnection.cs" />
     <Compile Include="Connection\TCPConnection.cs" />
     <Compile Include="CRCCalculator\CRCCalculator.cs" />
+    <Compile Include="Database\Alarm.cs" />
+    <Compile Include="Database\Event.cs" />
+    <Compile Include="Database\IAlarm.cs" />
+    <Compile Include="Database\IEvent.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Interfaces\IAnalogPoint.cs" />
     <Compile Include="Interfaces\IConfigItem.cs" />
