--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -126,5 +126,25 @@
       <Name>PubSubCommon</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\breaker-off.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\breaker-on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\recloser-on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\pump-off.png" />
+    <Resource Include="Assets\pump-on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\transformator-off.png" />
+    <Resource Include="Assets\transformator-on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\resloser-off.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
