--- a/NetworkDynamicService/NetworkDynamicService.csproj
+++ b/NetworkDynamicService/NetworkDynamicService.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cache\INDSRealTimePointCache.cs" />
+    <Compile Include="Cache\NDSRealTimePointCache.cs" />
     <Compile Include="Connected Services\AlarmServiceRef\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
