--- a/SCADA/ScadaCommon/ScadaCommon.csproj
+++ b/SCADA/ScadaCommon/ScadaCommon.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Interfaces\IProcessingManager.cs" />
     <Compile Include="Interfaces\IStorage.cs" />
     <Compile Include="Model\PointModel.cs" />
+    <Compile Include="NDSDataModel\AnalogPointCacheItem.cs" />
+    <Compile Include="NDSDataModel\BasePointCacheItem.cs" />
+    <Compile Include="NDSDataModel\DigitalPointCacheItem.cs" />
     <Compile Include="PointIdentifierHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceContract\IBackEndProessingData.cs" />
