--- a/BackEndProcessorService/App.config
+++ b/BackEndProcessorService/App.config
@@ -3,4 +3,13 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:10058/IAlarmEventService"
+        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService"
+        name="AlarmEventServiceEndPoint" />
+    </client>
+  </system.serviceModel>
+  
 </configuration>
