--- a/SCADA/ScadaCommon/ScadaCommon.csproj
+++ b/SCADA/ScadaCommon/ScadaCommon.csproj
@@ -82,6 +82,12 @@
     <Compile Include="ServiceProxies\NetworkDynamicServiceProxy.cs" />
     <Compile Include="ServiceProxies\NetworkDynamicStateServiceProxy.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common.csproj">
+      <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
