--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -51,6 +51,9 @@
       <endpoint address="net.tcp://localhost:20005/IPointUpdateService"
         binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IPointUpdateService"
         name="UpdatePointEndPoint" />
+      <endpoint address="net.tcp://localhost:10058/IAlarmEventService"
+        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService"
+        name="AlarmEventServiceEndPoint" />
     </client>
 
     
