--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -73,6 +73,14 @@
     </ApplicationDefinition>
     <Compile Include="Command\CommandOpenCommand.cs" />
     <Compile Include="Command\TapChangerCommand.cs" />
+    <Compile Include="Model\AsynchronousMachine.cs" />
+    <Compile Include="Model\Breaker.cs" />
+    <Compile Include="Model\Disconector.cs" />
+    <Compile Include="Model\Enums.cs" />
+    <Compile Include="Model\IEquipment.cs" />
+    <Compile Include="Model\Substation.cs" />
+    <Compile Include="Model\TapChanger.cs" />
+    <Compile Include="Model\Transformator.cs" />
     <Compile Include="Model\UIModel.cs" />
     <Compile Include="Subscription\SubNMS.cs" />
     <Compile Include="View\Command.xaml.cs">
